  currently no function in the API to do this
  Got to File/Options/Instant messages and disable the checkboxes there


CODE
----
  Currently a real mess. At least I splitted it up a bit now.
  But hey, it kinda works... ;)

HISTORY
-------
0.0.0.36 - ! When settings skype offline, first set proto off then contacts.
		   * move the broadcast of status change out of if statement in status change.

0.0.0.35 - * Use unicode nick, status message, city and country in skype profile.
           ! Fix for sending status change when offline
		   * Do not send message to skype if not attached (avoid trying to connect to api at startup)
           ! Fix crash on recieving message with groupchat checked.
           
0.0.0.34 - + Try to identify if chat message comes from a group chat or not
           + Add a option to flag group chat message as read if not using chat.dll for group chat.
		   ! Fix the check of message type (group chat or normal)

0.0.0.33 - ! Fix for flags of event and metacontact (thanks SJE)
           * Next step to custom popup support (in popup option page)
		   ! Fix infinite for error popup 

0.0.0.32 - ! Improvemnt of the Action message support.
		   ! Fix empty message on first chat with a contact.

0.0.0.31 - + First step to Action Message support ( /me )
		   + Updater support for File Listing.
		   + First step to a custom popup for call notification.

0.0.0.30 - + Add an option to enable/disable the timezone patch

0.0.0.29 - ! Try to fix the bug (set skype offline when closing miranda)

0.0.0.28 - * Improved portable skype integration

0.0.0.27 - * Try to fix the start using custom command line
		   + Close skype using custom command line too
		   	
0.0.0.26 - + Add a way to use a custom command line to start skype.

0.0.0.25 - ! patch from markcs about timezones.
           ! shutdown patch by sje
           
0.0.0.24 - * Change options dialog (use tabsrmm uxtheme)

0.0.0.23 - ! Wrong db entry name for cellular (cellucar)