@@ -15,6 +15,9 @@ HISTORY
 -------
 0.0.0.36 - ! When settings skype offline, first set proto off then contacts.
 		   * move the broadcast of status change out of if statement in status change.
+		   * Set contacts ofline on plugin load (avoid skype contact to be online if starts skype is not checked)
+		   ! Fix the use of datapath for portable skype
+		   * Allow to choose no splash - no tray  - minimized even if start skype with miranda is not checked.
 
 0.0.0.35 - * Use unicode nick, status message, city and country in skype profile.
            ! Fix for sending status change when offline
